--- a/package.json
+++ b/package.json
@@ -3,10 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/react": "^18.2.5",
-    "@types/react-dom": "^18.2.3",
-    "@firebase/auth": "^0.23.1",
-    "@firebase/firestore": "^3.11.0",
     "@react-google-maps/api": "^2.19.3",
     "@shadcn/ui": "^0.0.4",
     "@testing-library/jest-dom": "^5.16.5",
@@ -15,6 +11,9 @@
     "@types/jest": "^27.5.2",
     "@types/jquery": "^3.5.16",
     "@types/node": "^16.18.25",
+    "@types/react": "^18.2.5",
+    "@types/react-dom": "^18.2.3",
+    "@types/react-icons": "^3.0.0",
     "@types/react-slick": "^0.23.13",
     "aws-sdk": "^2.1692.0",
     "axios": "^1.3.3",
@@ -38,7 +37,6 @@
     "reactstrap": "^9.2.3",
     "slick-carousel": "^1.8.1",
     "sweetalert2": "^11.4.10",
-    "typescript": "^5.7.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -66,9 +64,9 @@
     ]
   },
   "devDependencies": {
-    "@types/firebase": "^3.2.1",
     "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-datepicker": "^4.8.0",
-    "@types/react-router-dom": "^5.3.3"
+    "@types/react-router-dom": "^5.3.3",
+    "typescript": "^5.8.2"
   }
 }
