--- a/package.json
+++ b/package.json
@@ -66,7 +66,6 @@
   "devDependencies": {
     "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-datepicker": "^4.8.0",
-    "@types/react-router-dom": "^5.3.3",
-    "typescript": "^5.8.2"
+    "@types/react-router-dom": "^5.3.3"
   }
 }
